# my-first-obs-package

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
