CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJECT "hello-obs" )
SET( YPREFIX "/usr" )

SET( VERSION_MAJOR "0")
SET( VERSION_MINOR "1" )
SET( VERSION_PATCH "0" )
SET( VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${GIT_SHA1_VERSION}" )

SET( SOURCES src/main.cpp )

ADD_DEFINITIONS(-DVERSION="${VERSION}")

project ( ${PROJECT} )
add_executable( ${PROJECT} ${SOURCES} )

install (TARGETS ${PROJECT} DESTINATION bin)
